@@ -1,7 +1,7 @@
 
 
 This archive contains the distribution Gtk3,
-version 0.002:
+version 0.003:
 
   Perl interface to the 3.x series of the gtk+ toolkit
 
