@@ -1,5 +1,5 @@
 name    = Gtk3
-version = 0.002
+version = 0.003
 author  = Torsten Schoenfeld <kaffeetisch@gmx.de>
 license = LGPL_2_1
 copyright_holder = Torsten Schoenfeld
@@ -24,6 +24,7 @@ filename = NEWS
 format = Overview of changes in Gtk3 %v [%{yyyy-MM-dd}d]%n==============================================
 
 [Git::Check]
+changelog = NEWS
 [Git::Commit]
 changelog = NEWS
 commit_msg = Release v%v%n%n%c
